--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <label for="name">Full Name</label>
             <input type="text" id="name" name="user_name" required placeholder="Required">
 
+
             <label for="email">Email Adress</label>
             <input type="email" id="email" name="user_email" required placeholder="Required">
+            <div class="requirements_email">Must be a valid email address.</div>
 
             <label for="phone">Phone number</label>
             <input type="tel" pattern="[0-9\s._/()%+-]*" id="phone" name="phone_number" placeholder="Not required">
