--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <input type="tel" pattern="[0-9\s._/()%+-]*" id="phone" name="phone_number" placeholder="Not required">
 
             <label for="street">Street Adress</label>
-            <input type="text" id="street" name="street" placeholder="Not required">
+            <input type="text" id="street" name="street" placeholder="Street + Nr.">
 
             <label for="city">City</label>
-            <input type="text" id="city" name="city" placeholder="Not required">
+            <input type="text" id="city" name="city" placeholder="Vienna">
 
             <label for=State>State</label>
             <select id="State" name="state">
@@ -60,7 +60,7 @@
             </select>
 
             <label for="zipcode">Zip Code</label>
-            <input type="text" id="zipcode" name="zipcode">
+            <input type="text" id="zipcode" name="zipcode" placeholder="44559">
         </fieldset>
         <div id="Border_Newsletter"></div>
         <fieldset class="Newsletter_Set">
@@ -77,7 +77,7 @@
 
 
                 <label for="other_topics" class="labelmargin">Other topics you would like to hear about</label>
-                <textarea id="other_topics" name="other_topics"></textarea>
+                <textarea id="other_topics" name="other_topics" placeholder="Sports maybe ;-)"></textarea>
         </fieldset>
 
         <button type="submit">Sign Up</button>
