--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="Border_Newsletter"></div>
         <fieldset class="Newsletter_Set">
           <legend class="Newsletter_Title">Newsletter</legend>
-          <label>Select the newsletter you would like to recive</label>
+          <span>Select the newsletter you would like to recive</span>
               <input type="checkbox" id="html_news" value="newsletter_html" name="newsletter_html"><label class="light" for="html_news">HTML News</label><br>
               <input type="checkbox" id="css_news" value="newsletter_css" name="newsletter_css"><label class="light" for="css_news">CSS News</label><br>
               <input type="checkbox" id="javascript_news" value="newsletter_javascript" name="newsletter_javascript"><label class="light" for="javascript_news">Javascript News</label><br>
